--- a/06_dom/01_ONE.html
+++ b/06_dom/01_ONE.html
@@ -13,7 +13,65 @@
 
 <!-- this all needs to be done in chrome/browser console  -->
 
- 
+ <!-- nodelist and array document are not proper array, always check prototype in console log -->
+ <!--   The primary difference between `querySelector` and `querySelectorAll` in terms of the data type they return is as follows:
+
+1. **`querySelector`**:
+   - **Return Type**: `Element` (or `null`).
+   - **Description**: This method returns the first Element within the document that matches the specified selector, or group of selectors. If no matches are found, it returns `null`.
+   - **Usage Example**:
+     ```javascript
+     const firstElement = document.querySelector('.example-class');
+     if (firstElement !== null) {
+       // Do something with firstElement
+     }
+     ```
+
+2. **`querySelectorAll`**:
+   - **Return Type**: `NodeList`.
+   - **Description**: This method returns a static (non-live) NodeList of all the elements in the document that match the specified selector, or group of selectors. Even if no matches are found, it returns an empty NodeList.
+   - **Usage Example**:
+     ```javascript
+     const allElements = document.querySelectorAll('.example-class');
+     allElements.forEach(element => {
+       // Do something with each element
+     });
+     ```
+
+### Key Differences:
+- **Single vs. Multiple Elements**: `querySelector` is used when you need to select a single element (the first one that matches), whereas `querySelectorAll` is used when you need to select multiple elements (all that match the selector).
+- **Return Type**:
+  - `querySelector` returns an `Element` object or `null` if no elements match the selector.
+  - `querySelectorAll` returns a `NodeList` object, which is a collection of nodes that can be iterated over, even if it's empty.
+
+### Practical Implications:
+- **Checking for Existence**:
+  - With `querySelector`, you often need to check if the result is `null` before proceeding.
+  - With `querySelectorAll`, you can directly iterate over the returned NodeList, and the loop will simply not execute if no matches are found.
+
+### Example Scenarios:
+- **Using `querySelector`**:
+  ```javascript
+  const header = document.querySelector('h1');
+  if (header) {
+    header.style.color = 'blue';
+  }
+  ```
+  This code changes the color of the first `h1` element found in the document to blue.
+
+- **Using `querySelectorAll`**:
+  ```javascript
+  const items = document.querySelectorAll('.list-item');
+  items.forEach(item => {
+    item.style.color = 'red';
+  });
+  ```
+  This code changes the color of all elements with the class `list-item` to red.
+
+By understanding these differences, you can choose the appropriate method depending on whether you need to work with a single element or a collection of elements. -->
+
+<!-- html collection is different from nodelist -->
+
  <!DOCTYPE html>
 <html lang="en">
 <head>
